# authorization

./: .gitmodules  Dockerfile  compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 42e97d2ae2e4_rename_user_auth_id.py  67d5946a8c46_user_auth_added.py  c6a9b7b4e2a3_.py
app/: main.py  pre_start.py
app/core/: config.py  db.py  security.py
app/crud/: __init__.py  refresh_token.py  user_auth.py
app/models/: __init__.py  refresh_token.py  timestamp_mixin.py  user_auth.py
app/schemas/: __init__.py  user_auth.py
app/servicers/: __init__.py  auth_servicer.py
scripts/: prestart.sh  proto.sh
